--- a/Aplicacion/Vista/componentes/index.phtml
+++ b/Aplicacion/Vista/componentes/index.phtml
@@ -3,7 +3,7 @@
 		<div class="col-md-12">
             <div class="x_panel">
                 <div class="x_title">
-                    <h2>Bienvenid@ <?php echo $user; ?><small>Información reciente...</small></h2>
+                    <h2><span class="lang-h2-welcome">Welcome</span> <?php echo $user; ?><small class="lang-small-information-recent">Recent information...</small></h2>
                     <div class="clearfix"></div>
                 </div>
             </div>
