--- a/Aplicacion/Vista/pag_errores/page_403.phtml
+++ b/Aplicacion/Vista/pag_errores/page_403.phtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -8,11 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Retail Custom Solutions</title>
-
-    <link href="../Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../Static/build/css/custom.min.css" rel="stylesheet">
-
+    <link rel="shortcut icon" href="http://www.retailcs.com/es/public/img/favicon.ico">
+    <!-- Bootstrap -->
+    <link href="http://www.retailcs.com/apps/extranet/Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://www.retailcs.com/apps/extranet/Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Datatables -->
+    <link href="http://www.retailcs.com/apps/extranet/Static/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
+    <!-- Custom Theme Style -->
+    <link href="http://www.retailcs.com/apps/extranet/Static/build/css/custom.min.css" rel="stylesheet">
+    <link href="http://www.retailcs.com/apps/extranet/Static/css/retailcs.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -24,9 +28,16 @@
             <div class="text-center text-center">
               <h1 class="error-number">403</h1>
               <h2>Acceso denegado</h2>
-              <p>Se requiere autenticación completa para acceder a este recurso. <a href="#">¿Reporta esto?</a>
-              </p>
+              <p>Se requiere autenticación completa para acceder a este recurso.</p>
               <div class="mid_center">
+                <p>
+                  <a href="http://www.retailcs.com/apps/extranet/">
+                    <img src="http://www.retailcs.com/apps/extranet/Static/images/pagehome.png" alt="Retail Custom Solution - Extranet" width="96px">
+                    <br><br>
+                    Ir a la página principal!
+                  </a>
+                </p>
+                <!--
                 <h3>Buscar</h3>
                 <form>
                   <div class="col-xs-12 form-group pull-right top_search">
@@ -38,6 +49,7 @@
                     </div>
                   </div>
                 </form>
+                -->
               </div>
             </div>
           </div>
@@ -46,9 +58,9 @@
       </div>
     </div>
 
-    <script src="../Static/vendors/jquery/dist/jquery.min.js"></script>
-    <script src="../Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../Static/build/js/custom.min.js"></script>
+    <script src="http://www.retailcs.com/apps/extranet/Static/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="http://www.retailcs.com/apps/extranet/Static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="http://www.retailcs.com/apps/extranet/Static/build/js/custom.min.js"></script>
 
   </body>
 </html>
