--- a/Aplicacion/Vista/componentes/actualizacion.phtml
+++ b/Aplicacion/Vista/componentes/actualizacion.phtml
@@ -17,7 +17,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<blockquote>
-				<p class="title"><?php echo $content_type->content_description; ?></p>
+				<p class="title"><?php if($_SESSION['Business']['Language']=='en'){ echo $content_type->content_description_en; } else { echo $content_type->content_description; } ?></p>
 				<div class="subtitle"><?php echo $product->product_name; ?></div>
 			</blockquote>
 		</div>
@@ -43,9 +43,9 @@
 			<!-- Inicio - Table Collapse 1 -->
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Versión <?php echo $version->version_description; ?><small>/ Actualizado el: <?php echo formatDayDate($content->publication_date); ?></small></h2>
+					<h2><span class="lang-span-version">Version</span> <?php echo $version->version_description; ?><small>/ <span class="lang-span-update">Updated the</span>: <?php echo formatDayDate($content->publication_date); ?></small></h2>
 					<ul class="nav navbar-right panel_toolbox">
-						<li><a class="collapse-link"><i class="fa fa-bars"></i> Ver Todo</a></li>
+						<li><a class="collapse-link"><i class="fa fa-bars"></i> <span class="lang-span-all">View All</span></a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
@@ -53,9 +53,9 @@
 					<table class="table table-striped table-actualizacion">
 						<thead>
 							<tr>
-								<th width="10%">N°</th>
-								<th width="15%">Fecha</th>
-								<th width="75%">Descripción</th>
+								<th class="lang-th-no" width="10%">N°</th>
+								<th class="lang-th-date" width="15%">Date</th>
+								<th class="lang-th-description" width="75%">Description</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -67,7 +67,7 @@
 							<tr>
 								<th scope="row"><?php echo $key_cd+1; ?></th>
 								<td><?php echo formatDate($value_cd->registry_date); ?></td>
-								<td><?php echo utf8_encode($value_cd->detail_description); ?></td>
+								<td><?php if($_SESSION['Business']['Language']=='en'){ echo utf8_encode($value_cd->detail_description_en); } else { echo utf8_encode($value_cd->detail_description); } ?></td>
 							</tr>
 
 							<?php
@@ -77,7 +77,7 @@
 						</tbody>
 					</table>					
 					<div class="actionBar">
-						<a href="javascript:void(0)" idcontent="<?php echo $content->idcontent; ?>" description="<?php echo $content_type->content_description; ?>" product="<?php echo $product->product_name; ?>" version="<?php echo $version->version_description; ?>" type="button" class="btn btn-primary download-content"><i class="fa fa-download"></i> Descargar en PDF</a>
+						<a href="javascript:void(0)" idcontent="<?php echo $content->idcontent; ?>" language="<?php echo $_SESSION['Business']['Language']; ?>" description="<?php if($_SESSION['Business']['Language']=='en'){ echo $content_type->content_description_en; } else { echo $content_type->content_description; } ?>" product="<?php echo $product->product_name; ?>" version="<?php echo $version->version_description; ?>" type="button" class="btn btn-primary download-content"><i class="fa fa-download"></i> <span class="lang-button-download-pdf">Download PDF</span></a>
 					</div>
 				</div>
 			</div>
