--- a/Aplicacion/Vista/componentes/empresa.phtml
+++ b/Aplicacion/Vista/componentes/empresa.phtml
@@ -25,7 +25,7 @@
 
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Nueva Empresa <small>Complete los campos</small></h2>
+					<h2><span class="lang-h2-new-business">new business</span> <small class="lang-small-texto">Complete the fields</small></h2>
 					<ul class="nav navbar-right panel_toolbox">
 						<li class="chevron-up-right">
 							<a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -52,13 +52,13 @@
 						</div>
 
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="business-name">Nombre Empresa <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="business-name"><span class="lang-label-name-business">Business Name</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="business-name" name="business-name" required="required" placeholder="ej. Retailcs" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="ruc">Ruc</label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="ruc"><span class="lang-label-ruc">Ruc</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="ruc" name="ruc" placeholder="ej. 20518880901" class="form-control col-md-7 col-xs-12">
 							</div>
@@ -69,11 +69,21 @@
 								<input type="text" id="address" name="address" placeholder="" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>-->
+						<div class="form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="language"><span class="lang-label-language">Language</span> <span class="required">*</span></label>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+								<select id="language" name="language" class="form-control" required="required">
+		                            <option value="" class="lang-option-select">-- Select --</option>
+		                            <option value="es">Español</option>
+		                            <option value="en">Inglés</option>
+	                          	</select>
+							</div>
+						</div>
 						<div class="ln_solid"></div>
 						<div class="form-group">
 							<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-								<button class="btn btn-primary" id="btn-reset" type="reset">Limpiar</button>
-								<button class="btn btn-success" id="btn-guardar-business" type="button">Guardar</button>
+								<button class="btn btn-primary lang-button-reset" id="btn-reset" type="reset">Reset</button>
+								<button class="btn btn-success lang-button-save" id="btn-guardar-business" type="button">Save</button>
 							</div>
 						</div>
 					</form>
@@ -82,7 +92,7 @@
 
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Lista de empresas <small>&nbsp;</small></h2>
+					<h2><span class="lang-h2-list-business">list of business</span> <small>&nbsp;</small></h2>
 					<ul class="nav navbar-right panel_toolbox">
 						<li class="chevron-up-right">
 							<a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
