--- a/Aplicacion/Vista/componentes/usuario.phtml
+++ b/Aplicacion/Vista/componentes/usuario.phtml
@@ -27,7 +27,7 @@
 
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Nuevo usuario <small>Complete los campos</small></h2>
+					<h2><span class="lang-h2-new-user">new user</span> <small class="lang-small-texto">Complete the fields</small></h2>
 					<ul class="nav navbar-right panel_toolbox">
 						<li class="chevron-up-right">
 							<a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -54,37 +54,37 @@
 						</div>
 
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="user-name">Nombre Usuario <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="user-name"><span class="lang-label-name-user">User Name</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="user-name" name="user-name" required="required" placeholder="ej. fcabezasr" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="password">Contraseña <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="password"><span class="lang-label-password">Password</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="password" id="password" name="password" required="required" placeholder="******" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="repeat-password">Repita Contraseña <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="repeat-password"><span class="lang-label-repeat-password">Repeat Password</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="password" id="repeat-password" name="repeat-password" required="required" placeholder="******" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="business-name">Empresa <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="business-name-sel"><span class="lang-label-business">Business</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<select id="business-name" name="business-name" class="form-control" required="required">
-		                            <option value="">-- Seleccione --</option>
+								<select id="business-name-sel" name="business-name-sel" class="form-control" required="required">
+		                            <option value="" class="lang-option-select">-- Select --</option>
 		                            <?php echo $listBusiness; ?>
 	                          	</select>
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="type-user">Tipo Usuario <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="type-user"><span class="lang-label-user-type">User Type</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<select id="type-user" name="type-user" class="form-control" required="required">
-		                            <option value="">-- Seleccione --</option>
+		                            <option value="" class="lang-option-select">-- Select --</option>
 		                            <?php echo $listTypeUser; ?>
 	                          	</select>
 							</div>
@@ -92,8 +92,8 @@
 						<div class="ln_solid"></div>
 						<div class="form-group">
 							<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-								<button class="btn btn-primary" id="btn-reset" type="reset">Limpiar</button>
-								<button class="btn btn-success" id="btn-guardar-user" type="button">Guardar</button>
+								<button class="btn btn-primary lang-button-reset" id="btn-reset" type="reset">Reset</button>
+								<button class="btn btn-success lang-button-save" id="btn-guardar-user" type="button">Save</button>
 							</div>
 						</div>
 					</form>
@@ -102,7 +102,7 @@
 
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Lista de usuarios <small>&nbsp;</small></h2>
+					<h2><span class="lang-h2-list-user">list of user</span> <small>&nbsp;</small></h2>
 					<ul class="nav navbar-right panel_toolbox">
 						<li class="chevron-up-right">
 							<a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -121,7 +121,7 @@
 
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Nuevo tipo de usuario <small>Complete los campos</small></h2>
+					<h2><span class="lang-h2-type-user">new type user</span> <small class="lang-small-texto">Complete the fields</small></h2>
 					<ul class="nav navbar-right panel_toolbox">
 						<li class="chevron-up-right">
 							<a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -140,7 +140,7 @@
 						</div>
 
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="description-type">Descripción <span class="required">*</span></label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="description-type"><span class="lang-label-description">Description</span> <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="description-type" name="description-type" required="required" placeholder="ej. admin" class="form-control col-md-7 col-xs-12">
 							</div>
@@ -148,8 +148,8 @@
 						<div class="ln_solid"></div>
 						<div class="form-group">
 							<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-								<button class="btn btn-primary" id="btn-reset" type="reset">Limpiar</button>
-								<button class="btn btn-success" id="btn-guardar-type-user" type="button">Guardar</button>
+								<button class="btn btn-primary lang-button-reset" id="btn-reset" type="reset">Reset</button>
+								<button class="btn btn-success lang-button-save" id="btn-guardar-type-user" type="button">Save</button>
 							</div>
 						</div>
 					</form>
@@ -158,7 +158,7 @@
 
 			<div class="x_panel">
 				<div class="x_title">
-					<h2>Lista de tipos de usuarios <small>&nbsp;</small></h2>
+					<h2><span class="lang-h2-list-type-user">list of user types</span> <small>&nbsp;</small></h2>
 					<ul class="nav navbar-right panel_toolbox">
 						<li class="chevron-up-right">
 							<a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
